@@ -16,7 +16,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import com.example.healthmonitoring.security.JwtAuthFilter;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -39,7 +38,7 @@ public class SecurityConfig {
             // Disable CSRF for REST API
             .csrf(csrf -> csrf.disable())
             
-            // Enable CORS
+            // Enable CORS with custom configuration
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             
             // Stateless session
@@ -50,6 +49,9 @@ public class SecurityConfig {
             .authorizeHttpRequests(auth -> auth
                 // Public endpoints - NO authentication required
                 .requestMatchers(
+                    "/",                        // Root path
+                    "/health",                  // Health check
+                    "/version",                 // Version info
                     "/api/v1/auth/**",
                     "/api/v1/ping",
                     "/api/v1/ping/**",
@@ -72,28 +74,49 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Allow all origins for development (restrict in production)
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        // ===== CẤU HÌNH MỞ RỘNG CHO DEVELOPMENT =====
         
-        // Allow all HTTP methods
+        // 1. Cho phép TẤT CẢ origins (development only)
+        configuration.addAllowedOriginPattern("*");
+        
+        // 2. Hoặc chỉ định cụ thể các origins (production)
+        // configuration.setAllowedOrigins(Arrays.asList(
+        //     "http://localhost:3000",           // React
+        //     "http://localhost:4200",           // Angular
+        //     "http://localhost:8081",           // Flutter web
+        //     "http://127.0.0.1:8080",          
+        //     "http://10.0.2.2:8080",            // Android emulator
+        //     "http://192.168.1.100:8080"        // Local network IP
+        // ));
+        
+        // 3. Cho phép TẤT CẢ HTTP methods
         configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"
         ));
         
-        // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
+        // 4. Cho phép TẤT CẢ headers
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         
-        // Expose Authorization header
-        configuration.setExposedHeaders(List.of("Authorization"));
+        // 5. Expose headers để client có thể đọc
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-Total-Count",
+            "X-Page-Number",
+            "X-Page-Size"
+        ));
         
-        // Don't allow credentials when using wildcard origin
+        // 6. Cho phép credentials (cookies, authorization headers)
+        // CHÚ Ý: Nếu set allowCredentials = true, KHÔNG được dùng "*" cho origins
         configuration.setAllowCredentials(false);
         
-        // Cache preflight response for 1 hour
+        // 7. Cache preflight response trong 1 giờ
         configuration.setMaxAge(3600L);
 
+        // Áp dụng cấu hình cho TẤT CẢ endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
         return source;
     }
 }
